wspdu/nb/poc_global_linreg_multistep: refactored optimize_elasticnet_pipeline to src.models

--- a/nb/world-stock-prices-daily-updating/poc_global_linreg_multistep.ipynb
+++ b/nb/world-stock-prices-daily-updating/poc_global_linreg_multistep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b24ab94a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
     "from data import load_raw_data, clean_raw_data, sample_tickers_dates, split_train_test_panel, build_features, create_X_y_multistep\n",
-    "from models import evaluate_multistep_forecast"
+    "from models import evaluate_multistep_forecast, optimize_elasticnet_pipeline"
    ]
   },
   {
@@ -238,94 +238,6 @@
    "metadata": {},
    "source": [
     "## Optimizing an ElasticNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a88388cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skopt import BayesSearchCV\n",
-    "from skopt.callbacks import DeltaYStopper\n",
-    "from skopt.space import Real\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import TimeSeriesSplit\n",
-    "\n",
-    "# Bayesian optimization of an ElasticNet pipeline\n",
-    "\n",
-    "def optimize_elasticnet_pipeline(\n",
-    "    X_train: pd.DataFrame,\n",
-    "    y_train: pd.Series,\n",
-    "    features2scale: list,\n",
-    "    cv_splits: int = 4,\n",
-    "    n_iter: int = 30\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Builds a Pipeline with preprocessing and ElasticNet, then runs BayesSearchCV.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    X_train : DataFrame of training features\n",
-    "    y_train : Series of training targets\n",
-    "    features2scale : list of column names to StandardScale\n",
-    "    cv_splits : number of TimeSeriesSplit folds\n",
-    "    n_iter : BayesSearchCV iterations\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    best_pipeline : Pipeline\n",
-    "        Pipeline refit on full training data with best hyperparameters\n",
-    "    best_params : dict\n",
-    "        Best-found hyperparameters\n",
-    "    \"\"\"\n",
-    "    # Preprocessing\n",
-    "    preprocessor = ColumnTransformer(\n",
-    "        transformers=[\n",
-    "            ('num', StandardScaler(), features2scale),\n",
-    "        ],\n",
-    "        remainder='passthrough'\n",
-    "    )\n",
-    "\n",
-    "    # Pipeline\n",
-    "    pipeline = Pipeline([\n",
-    "        ('preprocessor', preprocessor),\n",
-    "        ('model', ElasticNet(max_iter=1000, random_state=42))\n",
-    "    ])\n",
-    "\n",
-    "    # Hyperparameter search space\n",
-    "    search_spaces = {\n",
-    "        'model__alpha': Real(1e-3, 10.0, prior='log-uniform'),  # Constant that multiplies the penalty terms. alpha=0.0 is ordinary linear regression\n",
-    "        'model__l1_ratio': Real(0.0, 1.0, prior='uniform')  # The ElasticNet mixing parameter, with 0 <= l1_ratio <= 1. For l1_ratio = 0 the penalty is an L2 penalty. For l1_ratio = 1 it is an L1 penalty. \n",
-    "    }\n",
-    "\n",
-    "    # Time series CV\n",
-    "    tscv = TimeSeriesSplit(n_splits=cv_splits)\n",
-    "\n",
-    "    # stop if best objective hasn't improved in a while\n",
-    "    stopper = DeltaYStopper(delta=1e-2, n_best=5)\n",
-    "\n",
-    "    # BayesSearchCV\n",
-    "    bayes_cv = BayesSearchCV(\n",
-    "        estimator=pipeline,\n",
-    "        search_spaces=search_spaces,\n",
-    "        n_iter=n_iter,\n",
-    "        scoring='neg_root_mean_squared_error',\n",
-    "        cv=tscv,\n",
-    "        random_state=42,\n",
-    "        n_jobs=-1,\n",
-    "        verbose=0\n",
-    "    )\n",
-    "\n",
-    "    # Fit\n",
-    "    bayes_cv.fit(X_train, y_train, callback=stopper)\n",
-    "    print(f\"Best hyperparameters: {bayes_cv.best_params_}\")\n",
-    "\n",
-    "    return bayes_cv.best_estimator_, bayes_cv.best_params_"
    ]
   },
   {
